# mdfeed-itch

./: .clang-format  .gitignore  ARCHITECTURE.md  CMakeLists.txt  Dockerfile  Makefile  README.md  docker-compose.yml
.github/workflows/: ci.yml
bench/: cache_study.cpp  handler_bench.cpp  multicast_bench.cpp
bench/results/: bench_ci_baseline.json  bench_local.json
docs/: cache-padding-study.md  depth-book.md  differs-from-mdfeed-handler.md  gap-fill-recovery.md  itch-wire.md  pcap-replay.md  snapshot-wire.md
src/: main.cpp  pcap_gen.cpp  pcap_replay.cpp
src/core/: depth_book.cpp  depth_book.h  feed_handler.cpp  feed_handler.h  itch_messages.h  parser.cpp  parser.h  types.h
src/net/: multicast.cpp  multicast.h  tcp_recovery.cpp  tcp_recovery.h
src/obs/: clock.cpp  clock.h  histogram.cpp  histogram.h
src/pcap/: pcap_io.cpp  pcap_io.h
src/recovery/: gap_detector.cpp  gap_detector.h  snapshot_client.cpp  snapshot_client.h
src/sim/: book_snapshot.cpp  book_snapshot.h  book_snapshot_publisher.cpp  book_snapshot_publisher.h  book_snapshot_subscriber.cpp  book_snapshot_subscriber.h  publisher.cpp  publisher.h  snapshot_server.cpp  snapshot_server.h
tests/fuzz/: parser_fuzz.cpp
tests/integration/: book_snapshot_pubsub_test.cpp  gap_fill_test.cpp  multicast_test.cpp  pcap_replay_test.cpp  tsan_stress_test.cpp
tests/pcap/: itch_gap.pcap  itch_synthetic.pcap
tests/property/: depth_book_property_test.cpp  gap_detector_property_test.cpp  parser_property_test.cpp
tests/unit/: book_snapshot_test.cpp  depth_book_test.cpp  gap_detector_test.cpp  parser_test.cpp  snapshot_client_test.cpp
